<resources>
    <string name="app_name">New Heart</string>
    <string name="main_activity_title">NewHeart</string>
    <string name="action_settings">Settings</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="add_habit">Add habit</string>
    <string name="color_picker_default_title">Change color</string>
    <string name="toast_habit_created">Habit created</string>
    <string name="toast_habit_deleted">Habits deleted</string>
    <string name="toast_habit_restored">Habits restored</string>
    <string name="toast_nothing_to_undo">Nothing to undo</string>
    <string name="toast_nothing_to_redo">Nothing to redo</string>
    <string name="toast_habit_changed">Habit changed</string>
    <string name="toast_habit_changed_back">Habit changed back</string>
    <string name="toast_habit_archived">Habits archived</string>
    <string name="toast_habit_unarchived">Habits unarchived</string>
    <string name="title_activity_show_habit" translatable="false" />
    <string name="overview">Overview</string>
    <string name="habit_strength">Habit strength</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="description_hint">Question (Did you … today?)</string>
    <string name="repeat">Repeat</string>
    <string name="times_every">times in</string>
    <string name="days">days</string>
    <string name="reminder">Reminder</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="streaks">Streaks</string>
    <string name="no_habits_found">You have no shareActive habits</string>
    <string name="long_press_to_toggle">Press-and-hold to check or uncheck</string>
    <string name="reminder_off">Off</string>
    <string name="validation_name_should_not_be_blank">Name cannot be blank.</string>
    <string name="validation_number_should_be_positive">Number must be positive.</string>
    <string name="validation_at_most_one_rep_per_day">You can have at most one repetition per day</string>
    <string name="create_habit">Create habit</string>
    <string name="edit_habit">Edit habit</string>
    <string name="check">Check</string>
    <string name="snooze">Later</string>
    <string name="intro_title_1">Welcome</string>
    <string name="intro_description_1">New Heart helps you create and maintain good habits.</string>
    <string name="intro_title_2">Create some new habits</string>
    <string name="intro_description_2">Every day, after performing your habit, put a checkmark on the app.</string>
    <string name="intro_title_3">Keep doing it</string>
    <string name="intro_description_3">Habits performed consistently for a long time will earn a full star.</string>
    <string name="intro_title_4">Track your progress</string>
    <string name="intro_description_4">Detailed graphs show you how your habits improved over time.</string>
    <string name="interval_15_minutes">15 minutes</string>
    <string name="interval_30_minutes">30 minutes</string>
    <string name="interval_1_hour">1 hour</string>
    <string name="interval_2_hour">2 hours</string>
    <string name="interval_4_hour">4 hours</string>
    <string name="interval_8_hour">8 hours</string>
    <string name="interval_24_hour">24 hours</string>
    <string name="pref_toggle_title">Toggle with short press</string>
    <string name="pref_toggle_description">Put checkmarks with a single tap instead of press-and-hold. More convenient, but might cause accidental toggles.</string>
    <string name="pref_snooze_interval_title">Snooze interval on reminders</string>
    <string name="pref_rate_this_app">Rate this app on Google Play</string>
    <string name="pref_send_feedback">Send feedback to developer</string>
    <string name="pref_view_source_code">View source code at GitHub</string>
    <string name="pref_view_app_introduction">View app introduction</string>
    <string name="links">Links</string>
    <string name="behavior">Behavior</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="snooze_interval">Snooze interval</string>
    <string name="hint_title">Did you know?</string>
    <string name="hint_drag">To rearrange the entries, press-and-hold on the name of the habit, then drag it to the correct place.</string>
    <string name="hint_landscape">You can see more days by putting your phone in landscape mode.</string>
    <string name="delete_habits">Delete Habits</string>
    <string name="delete_habits_message">The habits will be permanently deleted. This action cannot be undone.</string>
    <string name="habit_not_found">Habit deleted / not found</string>
    <string name="weekends">Weekends</string>
    <string name="any_weekday">Monday to Friday</string>
    <string name="any_day">Any day of the week</string>
    <string name="select_weekdays">Select days</string>
    <string name="export_to_csv">Export as CSV</string>
    <string name="done_label">Done</string>
    <string name="clear_label">Clear</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string-array name="hints">
        <item>@string/hint_drag</item>
        <item>@string/hint_landscape</item>
    </string-array>
    <string name="about">About</string>
    <string name="translators">Translators</string>
    <string name="developers">Developers</string>
    <string name="version_n">Version %s</string>
    <string name="frequency">Frequency</string>
    <string name="checkmark">Checkmark</string>
    <string name="strength">Strength</string>
    <string name="best_streaks">Best streaks</string>
    <string name="current_streaks">Current streak</string>
    <string name="number_of_repetitions">Number of repetitions</string>
    <string name="last_x_days">Last %d days</string>
    <string name="last_x_weeks">Last %d weeks</string>
    <string name="last_x_months">Last %d months</string>
    <string name="last_x_years">Last %d years</string>
    <string name="all_time">All time</string>
    <string name="every_day">Every day</string>
    <string name="every_week">Every week</string>
    <string name="two_times_per_week">2 times per week</string>
    <string name="five_times_per_week">5 times per week</string>
    <string name="custom_frequency">Custom …</string>
    <string name="help">Help &amp; FAQ</string>
    <string name="could_not_export">Failed to export data.</string>
    <string name="could_not_import">Failed to import data.</string>
    <string name="file_not_recognized">File not recognized.</string>
    <string name="habits_imported">Habits imported successfully.</string>
    <string name="full_backup_success">Full backup successfully exported.</string>
    <string name="import_data">Import data</string>
    <string name="export_full_backup">Export full backup</string>
    <string name="import_data_summary">Supports full backups exported by this app, as well as files generated by Loop - Habit Tracker, Tickmate, HabitBull or Rewire. See FAQ for more information.</string>
    <string name="export_as_csv_summary">Generates files that can be opened by spreadsheet software such as Microsoft Excel or OpenOffice Calc. This file cannot be imported back.</string>
    <string name="export_full_backup_summary">Generates a file that contains all your data. This file can be imported back.</string>
    <string name="bug_report_failed">Failed to generate bug report.</string>
    <string name="generate_bug_report">Generate bug report</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="help_translate">Help translate this app</string>
    <string name="night_mode">Night mode</string>
    <string name="use_pure_black">Use pure black in night mode</string>
    <string name="pure_black_description">Replaces gray backgrounds with pure black in night mode. Reduces battery usage in phones with AMOLED display.</string>
    <string name="interface_preferences">Interface</string>
    <string name="reverse_days">Reverse order of days</string>
    <string name="reverse_days_description">Show days in reverse order on the main screen</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="quarter">Quarter</string>
    <string name="year">Year</string>
    <string name="total">Total</string>
    <string name="time_every">time in</string>
    <string name="every_x_days">Every %d days</string>
    <string name="every_x_weeks">Every %d weeks</string>
    <string name="every_x_months">Every %d months</string>
    <string name="score">Score</string>
    <string name="reminder_sound">Reminder sound</string>
    <string name="none">None</string>
    <string name="filter">Filter</string>
    <string name="hide_completed">Hide completed</string>
    <string name="hide_archived">Hide archived</string>
    <string name="sticky_notifications">Make notifications sticky</string>
    <string name="sticky_notifications_description">Prevents notifications from being swiped away.</string>
    <string name="repair_database">Repair database</string>
    <string name="database_repaired">Database repaired.</string>
    <string name="uncheck">Uncheck</string>
    <string name="toggle">Toggle</string>
    <string name="action">Action</string>
    <string name="habit">Habit</string>
    <string name="sort">Sort</string>
    <string name="manually">Manually</string>
    <string name="by_name">By name</string>
    <string name="by_color">By color</string>
    <string name="by_score">By score</string>
    <string name="download">Download</string>
    <string name="export">Export</string>
    <string name="habits_list">Habits/Goals</string>
    <string name="scripture_friends">Scripture Friends</string>
    <string name="acts_of_service">Acts Of Service</string>
    <string name="title_scripure_list">Scrptures</string>
    <string name="title_scripure_detail">Scripure Detail</string>
    <string name="view_scripture">View Scripture</string>
    <string name="memorize_scripture">Memorize</string>
    <string name="view_notes">View Study Journal</string>
    <string name="tap_to_add_scripture">Tap to add a scripture</string>
    <string name="complete_a_scripture">Mark a scripture as "Completed" to put it here.</string>
    <string name="popup_like_this_app">Enjoying this app?</string>
    <string name="popup_contribute">Contribute</string>
    <string name="feedback_dialog_message">Want to send feedback? Tap \"OK\" to write me an email.</string>
    <string name="feedback_dialog_cancel">Never mind</string>
    <string name="feedback_dialog_confirm">OK</string>
    <string name="install_gospel_library">Install Gopsel Library app from Google Play</string>
    <string name="open_gospel_library">Open Gospel Library</string>
    <string name="scripture_title_hint">Title / Scripture Reference</string>
    <string name="scripture_text_hint">Verses of Scripture</string>
    <string name="scripture_note_hint">Notes</string>
    <string name="tab_title_scripture">Scripture</string>
    <string name="tab_title_notes">Study Journal</string>
    <string name="menu_mark_in_progress">Mark as \"In Progress\"</string>
    <string name="menu_mark_complete">Mark as \"Completed\"</string>
    <string name="dialog_confirm_delete_scripture">
        Are you sure you want to delete this scripture and its study journals from your list?
    </string>
    <string name="tap_to_add_note">Tap to add a journal entry</string>
    <string name="title_activity_add_note">Add journal entry</string>
    <string name="text_hint_add_note">Type your study journal entry here</string>
    <string name="prompt_delete_note">Are you sure you want to delete this journal entry?</string>
</resources>