<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Charles Hancock
  ~
  ~ NewHeart is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ NewHeart is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <PreferenceCategory
        android:key="pref_key_debug"
        android:title="@string/troubleshooting">

        <Preference
            android:key="bugReport"
            android:title="@string/generate_bug_report"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="linksCategory"
        android:title="@string/links">

        <Preference android:title="@string/help">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/helpURL"/>
        </Preference>

        <Preference android:title="@string/pref_rate_this_app">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/playStoreURL"/>
        </Preference>

        <Preference android:title="@string/about">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.beakon.newheart.activities.about.AboutActivity"
                android:targetPackage="com.beakon.newheart"/>
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>