<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2017 Charles Hancock
  ~
  ~ NewHeart is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by the
  ~ Free Software Foundation, either version 3 of the License, or (at your
  ~ option) any later version.
  ~
  ~ NewHeart is distributed in the hope that it will be useful, but
  ~ WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY
  ~ or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
  ~ more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program. If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        app:popupTheme="?toolbarPopupTheme"
        style="@style/Toolbar"/>

    <TextView
        android:id="@+id/homeTVHabits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/habits_list"
        style="@style/Home.Item.Clickable"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/homeTVDailyScriptureStudy"
        style="@style/Home.Item.Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Daily Scripture Study"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/homeTVAttributesQuiz"
        style="@style/Home.Item.Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Attributes Quiz"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/homeTVScriptureFriends"
        style="@style/Home.Item.Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scripture_friends"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/homeTVService"
        style="@style/Home.Item.Clickable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/acts_of_service"
        android:textAlignment="center" />

</LinearLayout>